﻿## Full change log

### 1.4.2019.xxxx Release
----------------------------
		* Other: began to simplify the use of M2000CCompositeVisual.cs in AOA and Fuel panels
* Known issues: 
		* Fuel Panel: the Fuel CrossFeed Switch doesn’t work from Helios to DCS, the two toggle switches don’t work (seem not to be used in DCS)
		* Master Caution lights Panel: the click on the 2 indicators doesn’t work
		* HSI Panel: the potentiometer doesn’t work properly
		* ECM Box: the potentiometer is not working
		* UHF Panel: nothing is working from Helios to DCS
		
### 1.4.2019.1005 Release
----------------------------
* A-10C Interface
	* New devices for AN_ALR69V, TISL, DVADR and ACCELEROMETER
	* A-10C Interface completed, improvements in GuardedSwitch and CustomGauge, and new rotation option
	* Fixed:
		* "101", "IFFCC", "Ext Stores Jettison", fixed output buttom number.
		* All TISL values changed from IFFCC to the new device TISL.
		* Corrected the output buttons number of all IFF functions for the correct ones.
		* Added one missing position to Intercom, Transmitter Select Dial.

* M2000C Interface 
	* What’s new 
		* Added the Autopilot Panel with the test buttonthe test button and all push buttons with their indicators
		* Added the UHF Panel with the potentiometer, the 3 switches, the 2 push buttons with their indicator, the rotary switch and the drum
		* Added the Altimeter Panel with the pressure and the altitude drums, the altitude needle and the potentiometer
		* Improvement of guards on the Test and LG Panels: Made all 4 guards on this 2 panels working
		* Improvement of the Tacan Panel: add the 2 potentiometers and made them continuous and working
		* Improvement of VOR/ILS Panel: added the 2 potentiometers and made them continuous and working and made the Mode Selector working
		* Improvement of the HSI Panel: all the needles are working

* Controls:
	* Custom Gauge, chages to improve workflow and visuals
	* Guarded switch, added a new image for open state

* General: